--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,14 @@
 plugins {
     id 'java'
+    id 'application'
+
 }
 
 group = 'hexlet.code'
 version = '1.0-SNAPSHOT'
-
+application {
+    mainClass = 'hexlet.code.App'
+}
 repositories {
     mavenCentral()
 }
@@ -12,6 +16,10 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+}
+
+compileJava {
+    options.release = 17
 }
 
 test {
