--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,10 +14,19 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'io.github.joht.alias:type-alias-jsonb-typereference:2.0.0'
+    implementation 'io.github.joht.alias:type-alias-jsonb-typereference:2.0.0'
+    implementation 'io.github.joht.alias:type-alias-jsonb-typereference:2.0.0'
+    implementation 'io.github.joht.alias:type-alias-jsonb-typereference:2.0.0'
+    testImplementation platform('org.junit:junit-bom:5.9.2')
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     implementation 'info.picocli:picocli:4.7.3'
     annotationProcessor 'info.picocli:picocli-codegen:4.7.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.1'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.1'
+
+
 
 }
 
