--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'java'
     id 'application'
     id 'checkstyle'
+    id 'jacoco'
+    id 'net.ltgt.errorprone' version '3.1.0'
+
 
 }
 
@@ -10,36 +13,56 @@ version = '1.0-SNAPSHOT'
 application {
     mainClass = 'hexlet.code.App'
 }
+
 repositories {
     mavenCentral()
 }
 
+compileJava {
+    options.release = 20
+    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
+}
+
 dependencies {
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
     implementation 'io.github.joht.alias:type-alias-jsonb-typereference:2.0.0'
-    implementation 'io.github.joht.alias:type-alias-jsonb-typereference:2.0.0'
-    implementation 'io.github.joht.alias:type-alias-jsonb-typereference:2.0.0'
-    implementation 'io.github.joht.alias:type-alias-jsonb-typereference:2.0.0'
+    
     implementation 'info.picocli:picocli:4.7.3'
-    implementation 'info.picocli:picocli:4.7.3'
-    implementation 'info.picocli:picocli:4.7.3'
-    implementation 'info.picocli:picocli:4.7.3'
-    testImplementation platform('org.junit:junit-bom:5.9.2')
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
-    implementation 'info.picocli:picocli:4.7.3'
+    
     annotationProcessor 'info.picocli:picocli-codegen:4.7.3'
+    
+    testImplementation platform('org.junit:junit-bom:5.9.2')
+    
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+
+    testImplementation (
+        'org.junit.jupiter:junit-jupiter:5.9.2'
+        'org.slf4j:slf4j-log4j12:2.0.7',
+        'org.assertj:assertj-core:3.22.0'
+        )
+    
+    errorprone 'com.google.errorprone:error_prone_core:2.11.0'
+
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.15.1'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.1'
-
-
-
-}
-
-compileJava {
-    options.release = 17
-    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
 }
 
 test {
     useJUnitPlatform()
+}
+
+testlogger {
+    showStandardStreams true
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = true
+    }
+}
+
+checkstyle {
+    toolVersion '10.12.1'
 }
