--- a/app/Makefile
+++ b/app/Makefile
@@ -1,5 +1,36 @@
 #Makefile
 
+.DEFAULT_GOAL := build-run
+
+clean:
+	./gradlew clean
+
+build:
+	./gradlew clean build
+
+install:
+	./gradlew clean install
+
 run-dist: #start APP
 	./build/install/app/bin/app file1.json file2.json
+
+run:
+	./gradlew run
+
+test:
+	./gradlew test
+
+report:
+	./gradlew jacocoTestReport
+
+lint:
+	./gradlew checkstyleMain checkstyleTest
+
+update-deps:
+	./gradlew useLatestVersions
+
+build-run: build run
+
+.PHONY: build
+
 .PHONY: app
