--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,11 +51,12 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    
+    finalizedBy jacocoTestReport     
 }
 
-
-
 jacocoTestReport {
+    dependsOn test
     reports {
         xml.required = true
     }
