--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.15.1'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.1'
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.15.2'
+    implementation 'commons-io:commons-io:2.6'
 }
 
 test {
