--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,24 +24,27 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.12.0'
 
     implementation 'io.github.joht.alias:type-alias-jsonb-typereference:2.0.0'
-    
+
     implementation 'info.picocli:picocli:4.7.3'
     implementation 'com.tngtech.junit.dataprovider:junit-jupiter-dataprovider:2.10'
     implementation 'com.tngtech.junit.dataprovider:junit-jupiter-dataprovider:2.10'
     implementation 'com.tngtech.junit.dataprovider:junit-dataprovider-core:2.10'
 
     annotationProcessor 'info.picocli:picocli-codegen:4.7.3'
-    
+
     testImplementation platform('org.junit:junit-bom:5.9.2')
-    
+
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 
-    testImplementation (
-        'org.junit.jupiter:junit-jupiter:5.9.2',
-        'org.slf4j:slf4j-log4j12:2.0.7',
+    testImplementation("org.junit.jupiter:junit-jupiter:5.9.2")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+
+    testImplementation(
+            'org.junit.jupiter:junit-jupiter:5.9.2',
+            'org.slf4j:slf4j-log4j12:2.0.7',
             'org.assertj:assertj-core:3.24.2'
-        )
-    
+    )
+
     errorprone 'com.google.errorprone:error_prone_core:2.18.0'
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
