correct minor issues

--- a/app/Makefile
+++ b/app/Makefile
@@ -11,13 +11,17 @@ build:
 install:
 	./gradlew clean install
 
-run-distJson: #start APP with json
+run-distJson: #start APP with json default format
 	./build/install/app/bin/app file3.json file4.json
 
-run-distYaml: #start APP with yml
-	./build/install/app/bin/app file1.yml file2.yml
+run-distYaml: #start APP with yml default format
+	./build/install/app/bin/app file3.yml file4.yml
+
 run-distJsonPlain: #start APP with json and Plain result
 	./build/install/app/bin/app file3.json file4.json -f plain
+
+run-distYmlJson: #start APP with yml Json format
+	./build/install/app/bin/app file3.yml file4.yml -f json
 
 run:
 	./gradlew run
