remove package.info files and compileJava from build.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,10 +15,12 @@ repositories {
     mavenCentral()
 }
 
-compileJava {
+/* compileJava {
     options.release = 20
     options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
 }
+
+ */
 
 dependencies {
     implementation 'org.apache.commons:commons-lang3:3.12.0'
